--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto de Node con Typescript donde usaremos como BD PostgreSQL y para autenticar JWT",
   "main": "src/app.js",
   "scripts": {
-    "dev": "tsnd --respawn --clear src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build": "rimraf ./dist && tsc",
     "start": "node dist/server.js"
   },
@@ -22,9 +22,12 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.4",
     "typescript": "^5.3.3"
   }
 }
